syntax = "proto3";

package yandex.cloud.priv.vpc.v1.inner;

import "ydb/public/api/client/yc_private/common/validation.proto";

option go_package = "github.com/ydb-platform/ydb/ydb/public/api/client/yc_private/vpc/inner;vpcinnerpb";
option java_outer_classname = "PBO";

service BackofficeService {

  rpc FindAddress(FindAddressRequest) returns (FindAddressResponse);

}

message FindAddressRequest {
  string address = 1 [(required) = true];
}

message FindAddressResponse {
  string address_id = 1;
  oneof referrer {
    string instance_id = 2;
    string network_load_balancer_id = 3;
  }
}
